# Transformation

./: README.rst  params.yaml  pyproject.toml
docs/source/: conf.py  modules.rst
tests/: params.yaml  test_transformation.py
tests/data/: Data processing.ipynb  LAMMPS_HEA_114.POSCAR  LAMMPS_HEA_17_Transformed.POSCAR  LAMMPS_HEA_83.POSCAR  LAMMPS_HEA_83_Transformed.POSCAR
tests/data/conrard-frames-poscar/: LAMMPS_HEA_110.POSCAR  LAMMPS_HEA_17.POSCAR
transformation/: Orient.py  __init__.py  align.py  atm.xyz  atm_input.xyz  atm_y.xyz  atm_z.xyz  atms.xyz  atms_x.xyz  sliced_atoms.xyz  sliced_atoms_centered.POSCAR  transformed_atoms.xyz
transformation/data/: HEA_6.POSCAR  HEA_6_Transformed.POSCAR  readme.txt  slicing.ovito
transformation/tools/: Molecule.py  Quaternions.py  Rotations.py  __init__.py
transformation/utils/: __init__.py  arg_helper.py
